# nbaPredictor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  VALIDATION_REPORT.md  amazonML.py  import_lineup_from_image.py  pyproject.toml  requirements.txt  test_basketball_monster.py  test_image_scraper.py  test_nba_server.py  validate.py
db/: db_tables.sql  nba_teams_data.sql
db/migrations/: README.md  add_daily_lineup.sql  add_player_game_stats.sql  add_prediction_tables.sql  drop_unused_fields.sql
docs/: IMAGE_LINEUP_SCRAPER.md
lib/: nba_csvgenerator.py  nba_game.py  nba_statistics.py  recipe.json  sportbet.csv.schema
src/nba_predictor/: __init__.py  __main__.py  cli.py
src/nba_predictor/core/: __init__.py  config.py  logger.py
src/nba_predictor/models/: __init__.py  database.py  game.py  lineup.py  prediction.py  team.py
src/nba_predictor/prediction/: __init__.py  claude_predictor.py
src/nba_predictor/scraper/: __init__.py  basketballmonster_scraper.py  image_lineup_scraper.py  rotowire_scraper.py  scraper.py
src/nba_predictor/utils/: __init__.py  statistics.py
